<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.hnp</groupId>
	<artifactId>file-management</artifactId>
	<version>1.0.0</version>
	<name>file-management</name>
	<description>file-management</description>
	<packaging>jar</packaging>

	<properties>
		<java.version>21</java.version>
		<!-- Spring Boot 3.2.1 pins Lombok 1.18.30, whose annotation processor cannot run on a
		     JDK 25 javac. Override until the platform upgrade (docs/roadmap.md, Phase 1). -->
		<lombok.version>1.18.48</lombok.version>
		<!-- Boot 3.2.1 pins Testcontainers 1.19.3, which predates Docker context support and
		     cannot find a Docker Desktop daemon that only exposes dockerDesktopLinuxEngine. -->
		<testcontainers.version>1.21.4</testcontainers.version>
		<!-- Spring Boot 4.1.1 manages Tomcat 11.0.24, which carries three CRITICAL advisories:
		     CVE-2026-65905 (DIGEST replay), CVE-2026-65182 (incorrect authorization) and
		     CVE-2026-68525 (FORM authentication authorization) - the last one applies directly,
		     this application authenticates with a form. All three are fixed in 11.0.25.
		     Drop this override once the managed version reaches 11.0.25 or later. -->
		<tomcat.version>11.0.25</tomcat.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- Testcontainers pulls commons-compress 1.24.0 transitively, which carries
			     CVE-2024-25710 and CVE-2024-26308 (both fixed in 1.26.0). Test scope only, so it
			     never ships - pinned anyway so a scan of this repository comes back clean. Neither
			     Spring Boot nor the Testcontainers BOM manages this artifact, so it needs an
			     explicit entry rather than a version property. -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>1.28.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-ldap</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- Spring Boot 4 split its auto-configuration into per-technology modules. flyway-core is
		     only the library: without spring-boot-flyway the migrations never run, and Hibernate's
		     ddl-auto=validate then fails with "missing table". -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-flyway</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-mysql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Boot 4 moved each test slice into its own module alongside its auto-configuration:
		     @DataJpaTest, @AutoConfigureTestDatabase and @AutoConfigureMockMvc each now live in a
		     technology-specific artifact and package. -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-jdbc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mysql</artifactId>
			<scope>test</scope>
		</dependency>



	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<!-- JDK 23 and later no longer run annotation processors found on the classpath
					     implicitly, so Lombok has to be declared as an explicit processor path or
					     none of the generated getters/setters exist. -->
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
